--- a/NezdravaHrana/src/main/resources/application.properties
+++ b/NezdravaHrana/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MySQL
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.password          = root
-spring.datasource.url               = jdbc:mysql://localhost:3306/klinika
+spring.datasource.url               = jdbc:mysql://localhost:3306/nezdravahrana
 spring.datasource.username          = root
 
 logging.level.org.hibernate.SQL=debug
