--- a/NezdravaHrana/src/main/webapp/reactjs/package.json
+++ b/NezdravaHrana/src/main/webapp/reactjs/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
@@ -36,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "react-router-dom": "^5.2.0",
+    "sweetalert2": "^11.0.12"
   }
 }
