--- a/NezdravaHrana/src/main/resources/application.properties
+++ b/NezdravaHrana/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.port = 8080
+spring.data.elasticsearch.cluster-name = nezdravahrana
+spring.data.elasticsearch.cluster-nodes = localhost:9200
+elasticsearch.host = localhost
+elasticsearch.port = 9300
 #MySQL
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.password          = root
